Add rsbuild provider

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "workspaces": [
     "mf-remote",
+    "mf-remote-rsbuild",
     "js-remote",
     "host"
   ],
@@ -12,7 +13,7 @@
   },
   "scripts": {
     "build": "npm run build -ws",
-    "dev": "concurrently \"npm run preview -w js-remote\" \"npm run preview -w mf-remote\" \"npm run dev -w host\"",
+    "dev": "concurrently \"npm run preview -w js-remote\" \"npm run preview -w mf-remote\" \"npm run preview -w mf-remote-rsbuild\" \"npm run dev -w host\"",
     "format": "prettier --write \"**/src/**/*.{js,jsx,ts,tsx}\""
   }
 }
